# ADWSHound

./: .gitignore  README.md  adwshound.py  pyproject.toml  requirements.txt
adwshound/: __main__.py  opsec.py
adwshound/collectors/: acls.py  adcs.py  base.py  computer_extras.py  computers.py  containers.py  domains.py  gpos.py  groups.py  local_groups.py  logged_on.py  ous.py  registry_utils.py  sessions.py  spns.py  trusts.py  user_rights.py  users.py
adwshound/resolvers/: cache.py
adwshound/schema/: types.py
adwshound/transport/: client.py
