[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adwshound"
version = "1.0.0"
description = "BloodHound AD collector via ADWS (port 9389) — no LDAP required"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "impacket>=0.11.0",
    "pycryptodomex>=3.19.0",
    "pyasn1>=0.5.0",
    "dnspython>=2.4.0",
    "pyzipper>=0.3.6",
]

[project.optional-dependencies]
xml-recovery = ["lxml"]

[project.scripts]
adwshound = "adwshound.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["adwshound"]
